package com.company.DesignPattern.AdaptorPattern.PaymentAdopter;

public enum RezorpayStuts {
    SUCCESS,FUILURE
}
