package com.company.DesignPattern.AdaptorPattern.PaymentAdopter;

public enum StripeStatus {
    OK,ERROR
}
