package com.company.DesignPattern.AdaptorPattern.PaymentAdopter.models;

public enum PaymentStatus {
    OK,ERROR,SUCCESS,FUILURE
}
